force-app/main/default/objects/Job_Queue_Config__mdt/Job_Queue_Config__mdt.object-meta.xml
<CustomObject>
    <description>The job queue default configuration based on job name.</description>
    <label>Job Queue Config</label>
    <pluralLabel>Job Queue Configs</pluralLabel>
</CustomObject>