force-app/main/default/objects/Job_Queue_Config__mdt/fields/Job_Generator_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Job_Generator_Batch_Size__c</fullName>
    <description>The default batch size for job generation processing.</description>
    <inlineHelpText>The default batch size for job generation processing.</inlineHelpText>
    <label>Job Generator Batch Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>