force-app/main/default/objects/Job_Queue_Config__mdt/fields/Job_Generator_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Generator_Class_Name__c</fullName>
    <description>The Apex class name for the job generator.</description>
    <inlineHelpText>The Apex class name for the job generator.</inlineHelpText>
    <label>Job Generator Class Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>