force-app/main/default/objects/Job_Queue_Config__mdt/fields/Job_Handler_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Handler_Class_Name__c</fullName>
    <description>The Apex class name for the job handler.</description>
    <inlineHelpText>The Apex class name for the job handler.</inlineHelpText>
    <label>Job Handler Class Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>