force-app/main/default/objects/Job_Queue_Config__mdt/fields/Job_Handler_System_Params__c.field-meta.xml
<CustomField>
    <fullName>Job_Handler_System_Params__c</fullName>
    <description>The JSON serialized system params to be used by the job handler e.g., {&quot;hasCallout&quot;:true}. Supported params: hasCallout.</description>
    <inlineHelpText>The JSON serialized system params to be used by the job handler e.g., {&quot;hasCallout&quot;:true}. Supported params: hasCallout.</inlineHelpText>
    <label>Job Handler System Params</label>
    <length>255</length>
    <type>Text</type>
</CustomField>