force-app/main/default/objects/Job_Queue_Config__mdt/fields/Job_Operation__c.field-meta.xml
<CustomField>
    <fullName>Job_Operation__c</fullName>
    <description>This will be used to match the job operation to get the default values.</description>
    <inlineHelpText>This will be used to match the job operation to get the default values.</inlineHelpText>
    <label>Job Operation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>