force-app/main/default/objects/Job_Queue_Config__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Job_Operation__c</columns>
    <columns>Job_Generator_Class_Name__c</columns>
    <columns>Job_Generator_Batch_Size__c</columns>
    <columns>Job_Handler_Class_Name__c</columns>
    <columns>Job_Handler_Batch_Size__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>